--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "file-cache-simple",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Simple file caching",
   "main": "FileCacheSimple.js",
   "scripts": {
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/MichielvdVelde/file-cache-simple/issues"
   },
-  "homepage": "https://github.com/MichielvdVelde/file-cache-simple#readme"
+  "homepage": "https://github.com/MichielvdVelde/file-cache-simple#readme",
+  "dependencies": {
+    "extend": "^3.0.0",
+    "fs-jetpack": "^0.7.0"
+  }
 }
